--- a/workload/setup.yaml
+++ b/workload/setup.yaml
@@ -3,7 +3,7 @@ kind: Function
 metadata:
   name: workload-backup
 spec:
-  image: ishtiaq99/workload:6f71e6e_linux_amd64
+  image: ishtiaq99/workload:init-component_linux_amd64
   args:
   - backup
   - --scratchDir=/tmp
@@ -17,7 +17,7 @@ kind: Function
 metadata:
   name: workload-restore
 spec:
-  image: ishtiaq99/workload:6f71e6e_linux_amd64
+  image: ishtiaq99/workload:init-component_linux_amd64
   args:
   - restore
   - --namespace=${namespace:=default}
@@ -58,12 +58,12 @@ spec:
     - name: backup-workload
       function: workload-backup
       driver: Restic #Restic, WalG
-      executor: Job #Job, Sidecar, EphemeralContainer, MultiLevelJob
+      executor: BatchJob #Job, Sidecar, EphemeralContainer, MultiLevelJob
   restoreTasks:
     - name: restore-workload
       function: workload-restore
       driver: Restic
-      executor: Job
+      executor: BatchJob
 
 ---
 
