--- a/workload/daemonset/restore.yaml
+++ b/workload/daemonset/restore.yaml
@@ -1,7 +1,7 @@
 apiVersion: core.kubestash.com/v1alpha1
 kind: RestoreSession
 metadata:
-  name: sample-restoresession
+  name: sample-restore
   namespace: default
 spec:
   target:
