--- a/workload/setup.yaml
+++ b/workload/setup.yaml
@@ -3,12 +3,13 @@ kind: Function
 metadata:
   name: workload-backup
 spec:
-  image: ishtiaq99/workload:init-component_linux_amd64
+  image: ishtiaq99/workload:default-param_linux_amd64
   args:
   - backup
   - --scratchDir=/tmp
   - --namespace=${namespace:=default}
   - --backupSession=${backupSession:=}
+  - --taskName=${taskName:=}
 
 ---
 
@@ -17,12 +18,13 @@ kind: Function
 metadata:
   name: workload-restore
 spec:
-  image: ishtiaq99/workload:init-component_linux_amd64
+  image: ishtiaq99/workload:default-param_linux_amd64
   args:
   - restore
   - --namespace=${namespace:=default}
   - --restoreSession=${restoreSession:=}
   - --snapshotName=${snapshotName:=}
+  - --taskName=${taskName:=}
 
 ---
 
@@ -55,15 +57,31 @@ metadata:
   namespace: default
 spec:
   backupTasks:
-    - name: backup-workload
-      function: workload-backup
-      driver: Restic #Restic, WalG
-      executor: BatchJob #Job, Sidecar, EphemeralContainer, MultiLevelJob
+  - name: backup-workload
+    function: workload-backup
+    driver: Restic #Restic, WalG
+    executor: Job #Job, Sidecar, EphemeralContainer, MultiLevelJob
+    singleton: false
+    parameters:
+    - name: paths
+      usage: Specifies list of file paths to backup.
+      required: true
+    - name: exclude
+      usage: Specifies a list of patterns for the files that should be ignored during backup.
+      required: false
   restoreTasks:
-    - name: restore-workload
-      function: workload-restore
-      driver: Restic
-      executor: BatchJob
+  - name: restore-workload
+    function: workload-restore
+    driver: Restic
+    executor: Job
+    singleton: false
+    parameters:
+    - name: exclude
+      usage: Specifies a list of patterns for the files that should be ignored during restore.
+      required: false
+    - name: include
+      usage: Specifies a list of patterns for the files that should be restored
+      required: false
 
 ---
 
