--- a/manifest/postgres/postgres.yaml
+++ b/manifest/postgres/postgres.yaml
@@ -1,19 +1,16 @@
 apiVersion: kubedb.com/v1alpha2
-kind: MongoDB
+kind: Postgres
 metadata:
-  name: sample-mongodb
+  name: sample-postgres
   namespace: demo
 spec:
-  version: "5.0.3"
-  # replicaSet:
-  #  name: "rs1"
-  # replicas: 2
+  version: "11.11"
   storageType: Durable
   storage:
+    storageClassName: "standard"
     accessModes:
     - ReadWriteOnce
     resources:
       requests:
         storage: 1Gi
   terminationPolicy: Delete
-
