--- a/manifest/setup.yaml
+++ b/manifest/setup.yaml
@@ -3,7 +3,7 @@ kind: Function
 metadata:
   name: manifest-backup
 spec:
-  image: ishtiaq99/kubedb-manifest:update-km-version_linux_amd64
+  image: ishtiaq99/kubedb-manifest:fix-secret-restore_linux_amd64
   args:
   - backup
   - --scratchDir=/tmp
@@ -17,7 +17,7 @@ kind: Function
 metadata:
   name: manifest-restore
 spec:
-  image: ishtiaq99/kubedb-manifest:update-km-version_linux_amd64
+  image: ishtiaq99/kubedb-manifest:fix-secret-restore_linux_amd64
   args:
   - restore
   - --namespace=${namespace:=default}
@@ -40,7 +40,7 @@ apiVersion: storage.kubestash.com/v1alpha1
 kind: BackupStorage
 metadata:
   name: s3-storage
-  namespace: default
+  namespace: demo
 spec:
   storage:
     provider: s3
@@ -54,7 +54,7 @@ spec:
     allowedNamespaces:
       from: All
   default: true # Use this BackupStorage as the default
-  deletionPolicy: WipeOut # One of: WipeOut, Delete
+  deletionPolicy: WipeOut
 
 ---
 
@@ -62,7 +62,7 @@ apiVersion: addons.kubestash.com/v1alpha1
 kind: Addon
 metadata:
   name: kubedb-manifest-addon
-  namespace: default
+  namespace: demo
 spec:
   backupTasks:
   - name: backup-manifest
@@ -83,7 +83,7 @@ apiVersion: storage.kubestash.com/v1alpha1
 kind: RetentionPolicy
 metadata:
   name: demo-retention
-  namespace: default
+  namespace: demo
 spec:
   maxRetentionPeriod: 2mo
   successfulSnapshots:
