--- a/workload/daemonset/daemon.yaml
+++ b/workload/daemonset/daemon.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: testing
-  namespace: default
+  namespace: demo
   labels:
     app: test-app
   # annotations:
