--- a/webinar/setup.yaml
+++ b/webinar/setup.yaml
@@ -9,6 +9,8 @@ spec:
   - --scratchDir=/tmp
   - --namespace=${namespace:=default}
   - --backupSession=${backupSession:=}
+  - --paths=${paths:=}
+  - --exclude=${exclude:=}
 
 ---
 
@@ -23,6 +25,8 @@ spec:
   - --namespace=${namespace:=default}
   - --restoreSession=${restoreSession:=}
   - --snapshotName=${snapshotName:=}
+  - --exclude=${exclude:=}
+  - --include=${include:=}
 
 ---
 
@@ -35,11 +39,9 @@ spec:
   storage:
     provider: gcs
     gcs:
-      #endpoint: us-east-1.linodeobjects.com
       bucket: kubestash
-      #region: us-east-1
       prefix: demo
-      #secret: s3-secret 
+      secret: gcs-secret 
   usagePolicy:
     allowedNamespaces:
       from: All
