--- a/workload/statefulset/sts.yaml
+++ b/workload/statefulset/sts.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx
+  namespace: demo
   labels:
     app: nginx-app
 spec:
@@ -18,7 +19,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: web
-  namespace: default
+  namespace: demo
   # annotations:
   #   blueprint.kubestash.com/name: sts-blueprint
   #   blueprint.kubestash.com/namespace: default
