--- a/aws/sts.yaml
+++ b/aws/sts.yaml
@@ -55,7 +55,7 @@ spec:
       name: source-data
     spec:
       accessModes: [ "ReadWriteOnce" ]
-      storageClassName: "standard"
+      storageClassName: "gp2"
       resources:
         requests:
           storage: 256Mi
