--- a/workload/statefulset/restore.yaml
+++ b/workload/statefulset/restore.yaml
@@ -2,13 +2,13 @@ apiVersion: core.kubestash.com/v1alpha1
 kind: RestoreSession
 metadata:
   name: sample-restore
-  namespace: default
+  namespace: demo
 spec:
   target:
     apiGroup: apps
     kind: StatefulSet
     name: web
-    namespace: default
+    namespace: demo
   dataSource:
     repository: demo-storage-0
     snapshot: latest
@@ -17,7 +17,7 @@ spec:
     - pod-2
     encryptionSecret:
       name: encry-secret # some addon may not support encryption
-      namespace: default
+      namespace: demo
   addon:
     name: workload-addon
     tasks:
